Salesforce/main/default/main/default/objects/CRM_Vendas__c/CRM_Vendas__c.object-meta.xml
<CustomObject>
    <description>Detalle de Vendas. Contém informações sobre : Volume de Vendas Totais, Vendas por Variedade Grupo DONMARIO, Obtentores e Variedade, Sacas que Verticaliza, Sacas que compra fora</description>
    <label>CRM Detalhe de Vendas</label>
    <nameField>
        <label>Nombre de Vendas</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Detalhes de Vendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>