Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/CRM_Multiplicador__c.field-meta.xml
<CustomField>
    <fullName>CRM_Multiplicador__c</fullName>
    <label>CRM Multiplicador</label>
    <referenceTo>CRM_Multiplicador__c</referenceTo>
    <relationshipLabel>Detalhes de Vendas</relationshipLabel>
    <relationshipName>Detalhes_de_Vendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>