Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Cuenta del Multiplicador</description>
    <inlineHelpText>Cuenta del Multiplicador</inlineHelpText>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Detalhes de Vendas</relationshipLabel>
    <relationshipName>Detalhes_de_Vendas</relationshipName>
    <type>Lookup</type>
</CustomField>