Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Safra__c.field-meta.xml
<CustomField>
    <fullName>Safra__c</fullName>
    <label>Safra</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>16/17</fullName>
            </value>
            <value>
                <fullName>17/18</fullName>
                <default>true</default>
                <label>17/18</label>
            </value>
            <value>
                <fullName>18/19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>