Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Variedade_Prod__c.field-meta.xml
<CustomField>
    <fullName>Variedade_Prod__c</fullName>
    <formula>Variedad__r.Variedade__r.Name</formula>
    <label>Variedade_Prod</label>
    <type>Text</type>
</CustomField>