Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Vol_Outros_Obt__c.field-meta.xml
<CustomField>
    <fullName>Vol_Outros_Obt__c</fullName>
    <formula>IF( RecordType.Name = &apos;C&apos;,  Volume__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vol Outros Obt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>