Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Vol_sc_Comercializadas__c.field-meta.xml
<CustomField>
    <fullName>Vol_sc_Comercializadas__c</fullName>
    <formula>IF( RecordType.Name = &apos;D&apos;,  Volume__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vol sc Comercializadas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>