Salesforce/main/default/main/default/objects/CRM_Vendas__c/fields/Volume_Produzido__c.field-meta.xml
<CustomField>
    <fullName>Volume_Produzido__c</fullName>
    <label>Volume Produzido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>