Salesforce/main/default/main/default/objects/CRM_Vendas__c/recordTypes/B.recordType-meta.xml
<RecordType>
    <fullName>B</fullName>
    <active>true</active>
    <description>Vendas por Variedade Grupo DONMARIO</description>
    <label>B</label>
</RecordType>