Salesforce/main/default/main/default/objects/CRM_Vendas__c/recordTypes/C.recordType-meta.xml
<RecordType>
    <fullName>C</fullName>
    <active>true</active>
    <description>Outros Obtentores que Multiplica</description>
    <label>C</label>
</RecordType>