Salesforce/main/default/main/default/objects/CRM_Vendas__c/recordTypes/F.recordType-meta.xml
<RecordType>
    <fullName>F</fullName>
    <active>true</active>
    <description>Quantidade BX y DM que pretende produzir</description>
    <label>F</label>
</RecordType>