Salesforce/main/default/main/default/objects/CRM_Vendas__c/recordTypes/I.recordType-meta.xml
<RecordType>
    <fullName>I</fullName>
    <active>true</active>
    <description>Quantidade que Pretende Comprar fora de Outro Multiplicador</description>
    <label>I</label>
</RecordType>